# TF-COMB

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  _custom_build.py  pyproject.toml  required_packages.txt  setup.py
data/: CD4+_enhancers_chr1.bed  GM12878_enhancers_chr1.bed  GM12878_hg38_chr4_ATAC_peaks.bed  GM12878_hg38_chr4_TF_chipseq.bed  GM12878_hg38_chr4_chipseq.bed  GM12878_interactions_chr1.bedpe  HOCOMOCOv11_HUMAN_motifs.txt  K562_hg38_chr4_ATAC_peaks.bed  chr4_genes.gtf  gene_list.txt
docs/: CHANGELOG.rst  README.md  conf.py  examples.rst  genindex.rst  index.rst  install.rst  required_packages.txt
docs/API/: index.rst  tfcomb.analysis.rst  tfcomb.annotation.rst  tfcomb.distances.rst  tfcomb.network.rst  tfcomb.objects.rst  tfcomb.plotting.rst  tfcomb.utils.rst
docs/examples/: index.rst
docs/methods/: anchor.rst  index.rst  mba.rst
examples/: Annotate_TFBS.ipynb  Differential_analysis.ipynb  Directionality_analysis.ipynb  Distance_analysis.ipynb  GO-term_analysis.ipynb  Network_analysis.ipynb  Orientation_analysis.ipynb  Predefined_TFBS.ipynb  Select_rules.ipynb  TFBS_from_motifs.ipynb  Trans_cooccurrence.ipynb  binding_analysis.ipynb  chipseq_analysis.ipynb  get_pair_locations.ipynb  plot_TFBS_genome_view.ipynb  plot_pair_footprints.ipynb  run_notebooks.py
tfcomb/: __init__.py  analysis.py  annotation.py  counting.c  counting.html  counting.pyx  distances.py  logging.py  network.py  objects.py  plotting.py  utils.py
tfcomb/data/: JASPAR2020_CORE_vertebrates.txt  dmelanogaster_genes.txt  drerio_genes.txt  hsapiens_genes.txt  (+6 more)
